tests/baselines/reference/conditionalExpressionNewLine10.errors.txt
tests/cases/compiler/conditionalExpressionNewLine10.ts(1,9): error TS2304: Cannot find name 'a'.
tests/cases/compiler/conditionalExpressionNewLine10.ts(2,5): error TS2304: Cannot find name 'b'.
tests/cases/compiler/conditionalExpressionNewLine10.ts(3,7): error TS2304: Cannot find name 'd'.
tests/cases/compiler/conditionalExpressionNewLine10.ts(4,7): error TS2304: Cannot find name 'e'.
tests/cases/compiler/conditionalExpressionNewLine10.ts(5,5): error TS2304: Cannot find name 'c'.
tests/cases/compiler/conditionalExpressionNewLine10.ts(6,7): error TS2304: Cannot find name 'f'.
tests/cases/compiler/conditionalExpressionNewLine10.ts(7,7): error TS2304: Cannot find name 'g'.


==== tests/cases/compiler/conditionalExpressionNewLine10.ts (7 errors) ====
    var v = a 
            ~
!!! error TS2304: Cannot find name 'a'.
      ? b
        ~
!!! error TS2304: Cannot find name 'b'.
        ? d
          ~
!!! error TS2304: Cannot find name 'd'.
        : e
          ~
!!! error TS2304: Cannot find name 'e'.
      : c
        ~
!!! error TS2304: Cannot find name 'c'.
        ? f
          ~
!!! error TS2304: Cannot find name 'f'.
        : g;
          ~
!!! error TS2304: Cannot find name 'g'.